<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="8dp"
    android:padding="8dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/img_movie"
            android:textSize="20sp"
            tools:text="@string/titleMovie" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/img_movie"
            android:textSize="16sp"
            tools:text="@string/release_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDescription"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/tv_seedetail"
            android:textColor="@color/colorAccent" />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReleaseDate"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_movie"
            android:maxLines="4"
            tools:text="@string/Description" />
        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>